--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "rxjs": "~7.5.0",
+    "angular-gridster2": "^13.3.2",
+    "bootstrap": "^5.3.2",
+    "gojs": "^2.3.10",
+    "rxjs": "^7.5.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
